--- a/compose-files/docker-compose-hass.yml
+++ b/compose-files/docker-compose-hass.yml
@@ -28,7 +28,7 @@ services:
     environment:
       - TZ=Europe/Budapest
     devices:
-      - /dev/serial/by-id/usb-Texas_Instruments_TI_CC2531_USB_CDC___0X00124B0018ED3DDF-if00:/dev/ttyACM0
+      - /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20221031160550-if00:/dev/ttyACM0
   mqtt5:
     image: eclipse-mosquitto
     container_name: mqtt5
