--- a/compose-files/docker-compose-media.yml
+++ b/compose-files/docker-compose-media.yml
@@ -36,13 +36,14 @@ services:
       - nginx
   jackett:
     container_name: jackett
-    image: ghcr.io/hotio/jackett
+    image: lscr.io/linuxserver/jackett:latest
     ports:
       - "9117:9117"
     environment:
       - PUID=1000
       - PGID=1000
       - UMASK=002
+      - AUTO_UPDATE=true #optional
       - TZ=Europe/Budapest
     volumes:
       - /home/homelab/docker/media/jackett/config:/config
