sonarr volume updated

--- a/compose-files/docker-compose-media.yml
+++ b/compose-files/docker-compose-media.yml
@@ -30,6 +30,7 @@ services:
     volumes:
       - /home/homelab/docker/media/sonarr/config:/config
       - /mnt/media:/data
+      - /mnt/Downloads:/downloads
     restart: unless-stopped
     networks:
       - media
