downloads added to radarr

--- a/compose-files/docker-compose-media.yml
+++ b/compose-files/docker-compose-media.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - /home/homelab/docker/media/radarr/config:/config
       - /mnt/media:/data
+      - /mnt/Downloads:/downloads
     restart: unless-stopped
     networks:
       - media
