--- a/compose-files/docker-compose-database.yml
+++ b/compose-files/docker-compose-database.yml
@@ -11,6 +11,8 @@ services:
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
     volumes:
       - /home/homelab/docker/pgadmin:/var/lib/pgadmin
+    networks:
+      - database
   postgres:
     image: postgres:17-alpine
     container_name: postgres
@@ -22,6 +24,8 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
+    networks:
+      - database
 
 networks:
   database:
