--- a/compose-files/docker-compose-database.yml
+++ b/compose-files/docker-compose-database.yml
@@ -16,6 +16,7 @@ services:
   postgres:
     image: postgres:17-alpine
     container_name: postgres
+    restart: always
     ports:
       - 5432:5432
     volumes:
