--- a/compose-files/docker-compose-media.yml
+++ b/compose-files/docker-compose-media.yml
@@ -11,8 +11,8 @@ services:
       - TZ=Europe/Budapest
     volumes:
       - /home/homelab/docker/media/radarr/config:/config
-      - /mnt/media:/data
-      - /mnt/Downloads:/downloads
+      - /mnt/hdd/media:/data
+      - /mnt/hdd/downloads:/downloads
     restart: unless-stopped
     networks:
       - media
@@ -29,8 +29,8 @@ services:
       - TZ=Europe/Budapest
     volumes:
       - /home/homelab/docker/media/sonarr/config:/config
-      - /mnt/media:/data
-      - /mnt/Downloads:/downloads
+      - /mnt/hdd/media:/data
+      - /mnt/hdd/downloads:/downloads
     restart: unless-stopped
     networks:
       - media
@@ -59,8 +59,8 @@ services:
       - TZ=Europe/Budapest
     volumes:
       - /home/homelab/docker/bazarr/config:/config
-      - /mnt/media/Movies:/movies #optional
-      - /mnt/media/Series:/tv #optional
+      - /mnt/hdd/media/movies:/movies #optional
+      - /mnt/hdd/media/series:/tv #optional
     ports:
       - 6767:6767
     restart: unless-stopped
@@ -76,8 +76,8 @@ services:
       - TZ=Europe/Budapest
     volumes:
       - /home/homelab/media/jellyfin:/config
-      - /mnt/media/Movies:/data/Movies
-      - /mnt/media/Series:/data/Series
+      - /mnt/hdd/media/sovies:/data/Movies
+      - /mnt/hdd/media/series:/data/Series
     ports:
       - 8096:8096
     restart: unless-stopped
