kids folder added

--- a/compose-files/docker-compose-media.yml
+++ b/compose-files/docker-compose-media.yml
@@ -78,6 +78,7 @@ services:
       - /home/homelab/media/jellyfin:/config
       - /mnt/hdd/media/movies:/data/Movies
       - /mnt/hdd/media/series:/data/Series
+      - /mnt/hdd/media/kids:/data/Kids
     ports:
       - 8096:8096
     restart: unless-stopped
