--- a/compose-files/docker-compose-qbitorrent.yml
+++ b/compose-files/docker-compose-qbitorrent.yml
@@ -10,7 +10,7 @@ services:
       - TORRENTING_PORT=6881
     volumes:
       - /home/homelab/docker/qbitorrent/config:/config
-      - /mnt/Downloads:/downloads
+      - /mnt/hdd/downloads:/downloads
     ports:
       - 8080:8080
       - 6881:6881
