jellyseer added to media network

--- a/compose-files/docker-compose-media.yml
+++ b/compose-files/docker-compose-media.yml
@@ -118,6 +118,9 @@ services:
     volumes:
         - /home/homelab/docker/jellyseer/config:/app/config
     restart: unless-stopped
+    networks:
+      - media
+      - nginx
 
 networks:
   media:
