--- a/compose-files/docker-compose-sonarqube.yml
+++ b/compose-files/docker-compose-sonarqube.yml
@@ -5,8 +5,8 @@ services:
     container_name: sonarqube
     environment:
       SONAR_JDBC_URL: jdbc:postgresql://postgres:5432/sonar
-      SONAR_JDBC_USERNAME: ${SONARQUBE_USERNAME}sonarqube
-      SONAR_JDBC_PASSWORD: ${SONARQUBE_PASSWORD}sonardreko1379
+      SONAR_JDBC_USERNAME: ${SONARQUBE_USERNAME}
+      SONAR_JDBC_PASSWORD: ${SONARQUBE_PASSWORD}
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
