--- a/compose-files/docker-compose-database.yml
+++ b/compose-files/docker-compose-database.yml
@@ -1,6 +1,6 @@
 services:
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:latest
     container_name: pgadmin
     restart: always
     ports:
