--- a/compose-files/docker-compose-kimai.yml
+++ b/compose-files/docker-compose-kimai.yml
@@ -17,6 +17,8 @@ services:
       start_period: 10s
       timeout: 10s
       retries: 3
+    networks:
+      - kimai
 
   kimai:
     image: kimai/kimai2:apache
@@ -31,8 +33,11 @@ services:
       - "DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@kimai-sqldb/${DATABASE_NAME}?charset=utf8mb4&serverVersion=8.3.0"
     restart: unless-stopped
     networks:
+      - kimai
       - nginx
 
 networks:
+  kimai:
+    name: kimai
   nginx:
     external: true
